infrastructure/k8s/ingest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingest
  template:
    metadata:
      labels:
        app: ingest
    spec:
      containers:
        - name: ingest
          image: myhnregistry270.azurecr.io/backend:latest
          command: ["/app/ingest"]
          volumeMounts:
          - name: secrets-store-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true
            resources:
              requests:
                cpu: "100m"
                memory: "256Mi"
              limits:
                cpu: "300m"
                memory: "512Mi"
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv"
