infrastructure/k8s/ingest_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "34"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"ingest","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"ingest"}},"template":{"metadata":{"labels":{"app":"ingest"}},"spec":{"containers":[{"command":["/app/ingest"],"env":[{"name":"DATABASE_URL","valueFrom":{"secretKeyRef":{"key":"database_url","name":"secrets"}}},{"name":"OLLAMA_URL","value":"http://ollama:11434"},{"name":"DISABLE_AI","value":"true"}],"image":"myhnregistry270.az [...]
  creationTimestamp: "2026-03-23T05:23:33Z"
  generation: 34
  name: ingest
  namespace: default
  resourceVersion: "2835613"
  uid: 36a2dfca-ca19-409d-bdce-0ca252919c16
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ingest
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-03-30T11:28:06+05:30"
      creationTimestamp: null
      labels:
        app: ingest
    spec:
      containers:
      - command:
        - /app/ingest
        image: myhnregistry270.azurecr.io/backend:latest
        imagePullPolicy: Always
        name: ingest
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /mnt/secrets-store
          name: secrets-store-inline
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-kv
        name: secrets-store-inline
status:
  conditions:
  - lastTransitionTime: "2026-03-30T06:41:36Z"
    lastUpdateTime: "2026-03-30T06:41:36Z"
    message: ReplicaSet "ingest-5fd4bc4855" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-03-30T06:41:37Z"
    lastUpdateTime: "2026-03-30T06:41:37Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 34
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
