infrastructure/k8s/postgres_external_actual.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"service.beta.kubernetes.io/azure-dns-label-name":"hn-station-db-22139"},"name":"postgres-external","namespace":"default"},"spec":{"ports":[{"port":5432,"targetPort":5432}],"selector":{"app":"postgres"},"type":"LoadBalancer"}}
    service.beta.kubernetes.io/azure-dns-label-name: hn-station-db-22139
  creationTimestamp: "2026-03-25T06:11:40Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  name: postgres-external
  namespace: default
  resourceVersion: "825796"
  uid: c9278e50-f001-4eb6-8432-86ee800a0419
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.0.38.183
  clusterIPs:
  - 10.0.38.183
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31195
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 20.75.144.138
      ipMode: VIP
